--- a/3w/module_4/exo-10_svg/tp/index.html
+++ b/3w/module_4/exo-10_svg/tp/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <main>
            <img src="ressources/test.svg" alt="un rond bleu dans un carré jaune"/>
-           <img src="ressources/hello-world.svg" alt="hello world"
+           <img src="ressources/hello-world.svg" alt="hello world">
         </main>
     </div>
     <footer class="footer">
