--- a/maquette-brief1/index.html
+++ b/maquette-brief1/index.html
@@ -4,54 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Tinker</title>
 </head>
 <body>
     <header>
-        <nav class="flex">
-            <p class="maintitle"><span class="t">T</span>inker</p>
-            <ul class="flex">
-                <li>Home</li>
-                <li>ABOUT US</li>
-                <li>PORTFOLIO</li>
-                <li>BLOG</li>
-                <li>CONTACT US</li>
+        <div class="flex">
+            <p class="maintitle"><a href="#"><span class="t">T</span>inker</a></p>
+            <ul class="flex navmenu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
-        </nav>
-        <div>
-            <h1>Awesome HTML5 Template TINKER</h1>
+        </div>
+        <div class="headtext">
+            <h1>Awesome <span class="html">html5</span> template <span class="tinker">tinker</span></h1>
             <p>Phasellus aliquam finibus est, id tincidunt mauris fermentum a. In elementum diam et dui congue, ultrices bibendum mi lacinia. Aliquam lobortis dapibus nunc, nec tempus odio posuere quis.</p>
-            <div class="button">
-                <p class="buttontext">Let's start</p>
-            </div>
+            <div class="button"><a href="#">Let's start</a></div>
         </div>
     </header>
     <main>
         <div class="about">
             <div class="card">
                 <h2>Smart Alerts Updated</h2>
-                <p></p>
+                <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
                 <div class="buttonread">
                     <p>Continue reading</p>
                 </div>
                 <h2>Lovely HTML5 Layout</h2>
-                <p></p>
+                <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
                 <div class="buttonread">
                     <p>Continue reading</p>
                 </div>
                 <h2>Always CSS Ready</h2>
-                <p></p>
+                <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
                 <div class="buttonread">
                     <p>Continue reading</p>
                 </div>
                 <h2>One-Click Install</h2>
-                <p></p>
+                <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
                 <div class="buttonread">
                     <p>Continue reading</p>
                 </div>
             </div>
         </div>
+        <div class="portfolio">
+            <div class="gallerymenu">
+                <h2>Our gallery</h2>
+                <p>Chia hot chicken la croix ugh dreamcatcher man bun squid vaporware kinfolk</p>
+                <ul>
+                    <li>Show All</li>
+                    <li>Branding</li>
+                    <li>Graphic</li>
+                    <li>Nature</li>
+                    <li>Animation</li>
+                </ul>
+            </div>
+            <div class="gallery">
+                <div><img src="img/portfolio_big_item_01.jpg" alt="photo petit déjeuner"></div>
+                <div><img src="img/portfolio_big_item_02.jpg" alt="photo escalier"></div>
+                <div><img src="img/portfolio_big_item_03.jpg" alt="photo lunettes"></div>
+                <div><img src="img/portfolio_big_item_04.jpg" alt="photo petit déjeuner"></div>
+                <div><img src="img/portfolio_big_item_05.jpg" alt="photo petit déjeuner"></div>
+                <div><img src="img/portfolio_big_item_06.jpg" alt="photo bureau"></div>
+            </div>
+        </div>
+        <div class="quote">
+            <div>
+                <p>“Quisque ut ligula venenatis, euismod risus vel, consequat lacus. In ut purus id felis euismod cursus. Praesent in pulvinar arcu, vitae hendrerit lectus. Quisque a urna magna.”</p>
+            </div>
+            <p>Richard Beal</p>
+            <p>CSS Developer</p>
+        </div>
+        <div class="blog">
+            <div class="blogmenu">
+                <h2>Our blog posts</h2>
+                <p>Chia hot chicken la croix ugh dreamcatcher man bun squid vaporware kinfolk</p>
+                <ul>
+                    <li>Lorem Ipsum Dolor Sit</li>
+                    <li>Quisque Ultricies Maximus</li>
+                    <li>Sed Vel Elit Et Lorem</li>
+                    <li>Vivamus Purus Neque</li>
+                </ul>
+            </div>
+            <article>
+                <img src="img/blog_item_01.jpg" alt="photo couple dans une rue devant un marchand de glace">
+                <h2>Lorem ipsum dolor sir amet</h2>
+                <p class="date">Digital Marketing / John / 22 September 2017</p>
+                <p>Sed sed elementum diam. Nunc vehicula leo et ante dapibus tindicunt. Praesent fringilla mauris gravida enim laoreet, eu cursus erat dignissim. Praesent lacinia, nisi in suscipit commodo, risus elit viverra neque, ut pretium eros turpis vel enim. Mecenas vitae lacus purus.</p>
+            </article>
+        </div>
+        <div class="contact">
+            <h2></h2>
+            <p>Donec sit amet commodo arcu. Sed sit amet iaculis mi, vel fermentum nisi. Morbi dui enim, vestibulum non accumsan ac, tempor non nisl.</p>
+            <div class="buttoncontact">
+                <p>Send us a message</p>
+            </div>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.80849639257!2d103.86031221529893!3d1.289119162125308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19aa00de8b0f%3A0x5279b49bc0f2cae1!2s30%20Raffles%20Ave.%2C%20Singapore%20Flyer%2C%20Singapour%20039803!5e0!3m2!1sfr!2sfr!4v1672918285828!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <footer>
+            <div class="copyright">
+                <p><span>T</span>inker</p>
+                <p>Copyright © 2017 Your Company | Design: <span class="template">templatemo</span></p>
+            </div>
+            <div class="location">
+                <h2>Location</h2>
+                <p>30 Raffles Ave, Singapore 039803</p>
+                <p>1 Republic Blvd, Singapore 038975</p>
+            </div>
+            <div class="info">
+                <h2>More info</h2>
+                <p><span class="bolder">Phone</span>: 010-020-0340</p>
+                <p><span class="bolder">Email</span>: tk@company.co</p>
+            </div>
+            <div class="social">
+                <h2>Get social with us</h2>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
