--- a/maquette-brief1/index.html
+++ b/maquette-brief1/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Tinker</title>
@@ -13,8 +16,8 @@
         <div class="flex">
             <p class="maintitle"><a href="#"><span class="t">T</span>inker</a></p>
             <nav>                
-                <label for="burger"><i class="fa-solid fa-bars"></i></label>
                 <input class="disabled burger" type="checkbox" name="burger" id="burger">
+                <label for="burger"><i class="fa-solid fa-bars burger1"></i></label>
                 <ul class="flex navmenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About us</a></li>
@@ -63,6 +66,8 @@
             <div class="gallerymenu">
                 <h2>Our gallery</h2>
                 <p>Chia hot chicken la croix ugh dreamcatcher man bun squid vaporware kinfolk</p>
+                <input type="checkbox" class="disabled gallerybtn" name="gallery" id="gallery">
+                <label for="gallery"><i class="fa-solid fa-bars burger2"></i></label>
                 <ul>
                     <li>Show All</li>
                     <li>Branding</li>
@@ -72,20 +77,24 @@
                 </ul>
             </div>
             <div class="gallery">
-                <div><img src="img/portfolio_big_item_01.jpg" alt="photo petit déjeuner"></div>
-                <div><img src="img/portfolio_big_item_02.jpg" alt="photo escalier"></div>
-                <div><img src="img/portfolio_big_item_03.jpg" alt="photo lunettes"></div>
-                <div><img src="img/portfolio_big_item_04.jpg" alt="photo petit déjeuner"></div>
-                <div><img src="img/portfolio_big_item_05.jpg" alt="photo petit déjeuner"></div>
-                <div><img src="img/portfolio_big_item_06.jpg" alt="photo bureau"></div>
+                <img class="gallery1" src="img/portfolio_item_01.jpg" alt="photo petit déjeuner">
+                <img class="gallery2" src="img/portfolio_item_02.jpg" alt="photo escalier">
+                <img class="gallery3" src="img/portfolio_item_03.jpg" alt="photo lunettes">
+                <img class="gallery4" src="img/portfolio_item_04.jpg" alt="photo petit déjeuner">
+                <img class="gallery5" src="img/portfolio_item_05.jpg" alt="photo petit déjeuner">
+                <img class="gallery6" src="img/portfolio_item_06.jpg" alt="photo bureau">
             </div>
         </div>
         <div class="quote">
-            <div>
-                <p>“Quisque ut ligula venenatis, euismod risus vel, consequat lacus. In ut purus id felis euismod cursus. Praesent in pulvinar arcu, vitae hendrerit lectus. Quisque a urna magna.”</p>
-            </div>
+            <p>“Quisque ut ligula venenatis, euismod risus vel, consequat lacus. In ut purus id felis euismod cursus. Praesent in pulvinar arcu, vitae hendrerit lectus. Quisque a urna magna.”</p>
             <p>Richard Beal</p>
             <p>CSS Developer</p>
+            <div class="maincircle">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
         </div>
         <div class="blog">
             <div class="blogmenu">
@@ -99,29 +108,33 @@
                 </ul>
             </div>
             <article>
-                <img src="img/blog_item_01.jpg" alt="photo couple dans une rue devant un marchand de glace">
-                <h2>Lorem ipsum dolor sir amet</h2>
-                <p class="date">Digital Marketing / John / 22 September 2017</p>
-                <p>Sed sed elementum diam. Nunc vehicula leo et ante dapibus tindicunt. Praesent fringilla mauris gravida enim laoreet, eu cursus erat dignissim. Praesent lacinia, nisi in suscipit commodo, risus elit viverra neque, ut pretium eros turpis vel enim. Mecenas vitae lacus purus.</p>
-            </article>
+                    <img src="img/blog_item_01.jpg" alt="photo couple dans une rue devant un marchand de glace">
+                    <div>
+                        <h2>Lorem ipsum dolor sir amet</h2>
+                        <p class="date">Digital Marketing / John / 22 September 2017</p>
+                        <p>Sed sed elementum diam. Nunc vehicula leo et ante dapibus tindicunt. Praesent fringilla mauris gravida enim laoreet, eu cursus erat dignissim. Praesent lacinia, nisi in suscipit commodo, risus elit viverra neque, ut pretium eros turpis vel enim. Mecenas vitae lacus purus.</p>
+                    </div>
+                </article>
         </div>
         <div class="contact">
-            <h2></h2>
+            <h2>Contact us</h2>
             <p>Donec sit amet commodo arcu. Sed sit amet iaculis mi, vel fermentum nisi. Morbi dui enim, vestibulum non accumsan ac, tempor non nisl.</p>
             <div class="buttoncontact">
-                <p>Send us a message</p>
+                Send us a message
             </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.80849639257!2d103.86031221529893!3d1.289119162125308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19aa00de8b0f%3A0x5279b49bc0f2cae1!2s30%20Raffles%20Ave.%2C%20Singapore%20Flyer%2C%20Singapour%20039803!5e0!3m2!1sfr!2sfr!4v1672918285828!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.80849639257!2d103.86031221529893!3d1.289119162125308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19aa00de8b0f%3A0x5279b49bc0f2cae1!2s30%20Raffles%20Ave.%2C%20Singapore%20Flyer%2C%20Singapour%20039803!5e0!3m2!1sfr!2sfr!4v1672918285828!5m2!1sfr!2sfr"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <footer>
             <div class="copyright">
-                <p><span>T</span>inker</p>
+                <p class="maintitle"><a href="#"><span class="t">T</span>inker</a></p>
                 <p>Copyright © 2017 Your Company | Design: <span class="template">templatemo</span></p>
             </div>
             <div class="location">
                 <h2>Location</h2>
-                <p>30 Raffles Ave, Singapore 039803</p>
-                <p>1 Republic Blvd, Singapore 038975</p>
+                <div class="adress">
+                    <p>30 Raffles Ave, Singapore 039803</p>
+                    <p>1 Republic Blvd, Singapore 038975</p>
+                </div>
             </div>
             <div class="info">
                 <h2>More info</h2>
@@ -130,6 +143,11 @@
             </div>
             <div class="social">
                 <h2>Get social with us</h2>
+                <i class="fa-brands fa-facebook-f socialicons"></i>
+                <i class="fa-brands fa-twitter socialicons"></i>
+                <i class="fa-brands fa-linkedin-in socialicons"></i>
+                <i class="fa-solid fa-rss socialicons"></i>
+                <i class="fa-brands fa-dribbble socialicons"></i>
             </div>
         </footer>
     </main>
