--- a/pendu/index.html
+++ b/pendu/index.html
@@ -9,7 +9,7 @@
 <body>
     <button font-size="25">Jouer</button>
     <p></p>
-    <canvas position="absolute" right ="400" width="400" height="400"></canvas>
+    <canvas style="float : right"; width="400" height="400"></canvas>
     <script src="pendu.js"></script>
 </body>
 </html>
