--- a/pendu/index.html
+++ b/pendu/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <button font-size="25">Jouer</button>
-    <p></p>
+    <p id="word"></p>
+    <h2>Lettres jouées</h2>
+    <p id="wrong"></p>
     <canvas style="float : right"; width="400" height="400"></canvas>
     <script src="pendu.js"></script>
 </body>
