--- a/js cours/index.html
+++ b/js cours/index.html
@@ -7,6 +7,6 @@
     <title>Pendu</title>
 </head>
 <body>
-    <script src="pendu.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
