--- a/pendu/index.html
+++ b/pendu/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <button font-size="25">Jouer</button>
-    <p></p>
-    <canvas style="float : right"; width="400" height="400"></canvas>
+    <p style="font-size: 30px"></p>
+    <canvas style="float : right" width="400" height="400"></canvas>
     <script src="pendu.js"></script>
 </body>
 </html>
