--- a/js cours/index.html
+++ b/js cours/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pendu</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <img src="" alt=""/>
+    <button id="colorme">Color body</button>
+        <div class="flex">
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+            <div class="carre"></div>
+        </div>
+        <div id="pistache" class="id"></div>
+        <div id="patate" class="id"></div>
+        <div id="tomate" class="id"></div>
+    <script src="color.js"></script>
 </body>
 </html>
