--- a/morpion/index.html
+++ b/morpion/index.html
@@ -25,6 +25,6 @@
     </div>
 
     <h1 id="gameStatus">Le joueur 1 commence !</h1>
-    <script src="second.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
