--- a/mario/index.html
+++ b/mario/index.html
@@ -16,6 +16,7 @@
         <i class="fa-solid fa-chevron-up bouton" id="g"></i>
         <i class="fa-solid fa-chevron-up bouton" id="d"></i>
     </div>
+    <div id="pop"></div>
     <script src="script.js"></script>
 </body>
 </html>
